RESOLVED FIXED307442
[block-in-inline] Fix fast/block/float/floats-wrap-inside-inline-001.htm (ASSERT)
https://bugs.webkit.org/show_bug.cgi?id=307442
Summary [block-in-inline] Fix fast/block/float/floats-wrap-inside-inline-001.htm (ASS...
alan
Reported 2026-02-10 08:43:45 PST
ssia
Attachments
[fast-cq]Patch (1.25 KB, patch)
2026-02-10 08:46 PST, alan
no flags
alan
Comment 1 2026-02-10 08:46:46 PST
Created attachment 478303 [details] [fast-cq]Patch
EWS
Comment 2 2026-02-10 09:55:23 PST
Committed 307184@main (69f6093461aa): <https://commits.webkit.org/307184@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478303 [details].
Radar WebKit Bug Importer
Comment 3 2026-02-10 09:56:12 PST
Note You need to log in before you can comment on or make changes to this bug.