[block-in-inline] Fix fast/block/float/floats-wrap-inside-inline-001.htm (ASSERT) https://bugs.webkit.org/show_bug.cgi?id=307442

Reviewed by Antti Koivisto.

Add 'block' case when it is not nested inside inline box(es).

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::hasTrailingSoftWrapOpportunity):

Canonical link: https://commits.webkit.org/307184@main